Wed Sep 16 03:30:44 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * cuts/utils/unite/Unit_Test_Builder.h:
        * cuts/utils/unite/Unit_Test_Graph_Builder.h:
        * cuts/utils/unite/Unite_Datagraph_File.h:
        * cuts/utils/unite/cuts-unite.h:
        * cuts/utils/unite/cuts-unite.inl:
        * cuts/utils/unite/cuts-unite.cpp:
        * cuts/utils/unite/unite.mpc:


          . Refactored the projects to that all the XML-related classes
            are included in this library.

        * etc/schemas/cuts-unite.xsd:

          . Added support for aspects to the schema definition.

Wed Sep 16 00:24:54 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MPC/config/cuts_unite.mpb:
        * MPC/config/cuts_unite_xml.mpb:
        * cuts/utils/unite/unite.mpc:

          . Updated the base projects.

Wed Sep 16 00:00:31 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MPC/config/cuts_unite_xml.mpb:
        * cuts/utils/unite/Unite_Xml_export.h:
        * cuts/utils/unite/cuts-unite.h:
        * cuts/utils/unite/unite.mpc:

          . Separated the XML files for Unite into their own project
            so they can be reused in different applications.

Tue Sep 15 23:14:54 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_IDL_Graph.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_IDL_Node.h:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_algorithm.h:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/BE_algorithm.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Project_Generator.h:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Project_Generator.inl:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Project_Generator.cpp:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Servant_Generator.h:
        * MDE/GME/paradigms/CHAOS/interpreters/codegen/Servant_Generator.cpp: