@@ -61,6 +61,7 @@ project (CUTS_Unite_Xml) : boost_base, xscrt, cuts_unite, cutslib {
     cuts-unite.cpp
     Unit_Test_Builder.cpp
     Unit_Test_Graph_Builder.cpp
+    Unite_Config_File.cpp
     Unite_Datagraph_File.cpp
   }
 
@@ -81,7 +82,6 @@ project (CUTS_Unite_Exe) : boost_base, cuts_unite_xml, cutsexe {
 
   Source_Files {
     unite.cpp
-    Unite_Config_File.cpp
     Unite_App.cpp
   }
 
